# mtgo_overlay

./: .gitignore  CLAUDE.md  README.md  build.ps1  main.py  pyproject.toml  run.py
.github/workflows/: ci.yml  release.yml
capture/: screen_capture.py
crawler/: card_names.py  fetch.py  logs.py  ratings.py
image_recognition/: fetch.py  logs.py  preprocessing.py  rec.py  text_extraction.py
installer/: MtgoOverlay.iss
overlay/: display.py
scripts/: release.sh
src/mtgo_overlay/: __init__.py  app.py
src/mtgo_overlay/capture/: __init__.py  screen_capture.py
src/mtgo_overlay/config/: settings.py
src/mtgo_overlay/data/: embargo.py  expansions.py  goatbots.py  prices_repo.py  ratings_repo.py  sets.py  seventeenlands.py
src/mtgo_overlay/draft/: __init__.py  log_parser.py  log_watcher.py
src/mtgo_overlay/onboarding/: __init__.py  wizard.py
src/mtgo_overlay/overlay/: __init__.py  overlay_window.py  window_tracker.py
src/mtgo_overlay/recognition/: __init__.py  config.py  eval.py  identify.py  pipeline.py  reference.py  region.py  scryfall_art.py  types.py
src/mtgo_overlay/system/: __init__.py  logging_setup.py  paths.py  resources.py  updater.py  win32.py
tests/: conftest.py  test.py  test_app.py  test_config.py  test_data.py  test_embargo.py  test_eval.py  test_expansions.py  test_goatbots.py  test_identify.py  test_log_parser.py  test_onboarding.py  test_overlay.py  test_paths.py  test_pipeline.py  test_prices_repo.py  test_reference.py  test_region.py  test_scryfall.py  test_updater.py
tests/fixtures/logs/: draft_real_msh.txt  draft_sample.txt  live_pack1_msh.txt
tests/fixtures/msh/: p1p1_empty_pool.json  pack1_pick1.json  with_drafted.json  with_drafted_pick_3.json
tests/fixtures/ratings/: sample_17lands.json  sample_card_ratings.csv
tools/: annotate_preview.py  fake_mtgo.py  label_preview.py  preview_overlay.py  price_preview.py  propose_groundtruth.py  replay_log.py
