[project]
name = "mtgo-overlay"
version = "0.2.0"
description = "Click-through overlay drawing 17lands GIH win rates onto the MTGO draft pick view."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "scipy>=1.12",
    "requests>=2.31",
    "watchdog>=4.0",
    "mss>=9.0",
    "Pillow>=10.0",
    "tomli-w>=1.0",
    # Windows-only runtime glue (win32 ex-styles, etc.). Not installed under WSL/Linux.
    "pywin32>=306 ; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]

[project.scripts]
mtgo-overlay = "mtgo_overlay.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mtgo_overlay"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]
